# llmma

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/llmma/: __init__.py  _bench.py  _providers.py  _version.py  llmma.py  model.py  provider.py  result.py
src/llmma/_lazy/: __init__.py  loader.py
src/llmma/_lazy/libs/: ai21.py  aleph.py  anthropic.py  bedrock_anthropic.py  cohere.py  deepseek.py  google.py  google_genai.py  groq.py  huggingface.py  mistral.py  ollama.py  openai.py  openrouter.py  reka.py  together.py
src/llmma/model/: __init__.py  info.py
src/llmma/providers/: __init__.py  ai21.py  aleph.py  anthropic.py  base.py  bedrock_anthropic.py  cohere.py  deepseek.py  google.py  google_genai.py  groq.py  huggingface.py  mistral.py  ollama.py  openai.py  openrouter.py  reka.py  together.py
