[project]
name = "llmma"
description = "Minimal Python library to connect to LLMs (OpenAI, Anthropic, Google, Mistral, OpenRouter, Reka, Groq, Together, Ollama, AI21, Cohere, Aleph-Alpha, HuggingfaceHub), with a built-in model performance benchmark."
readme = "README.md"
authors = [{ name = "Isabella Basso", email = "isabellabdoamaral@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Text Processing",
]
keywords = [
    "llm",
    "llms",
    "large language model",
    "AI",
    "NLP",
    "natural language processing",
    "gpt",
    "chatgpt",
    "openai",
    "anthropic",
    "ai21",
    "cohere",
    "aleph alpha",
    "huggingface hub",
    "vertex ai",
    "palm",
    "palm2",
]
dependencies = [
    "attrs>=25.3.0",
    "cattrs>=24.1.2",
    "pydantic>=2.10.6",
    "prettytable>=3.12.0",
    "tiktoken>=0.9.0",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/llmma/_version.py"

[project.urls]
homepage = "https://github.com/kagisearch/pyllms"

[project.optional-dependencies]
local = ["einops", "accelerate"]
ai21 = ["ai21>=3.1.0"]
aleph-alpha = ["aleph-alpha-client>=10.0.0"]
anthropic = ["anthropic>=0.49.0"]
cohere = ["cohere>=5.14.0"]
google-cloud = ["google-cloud-aiplatform>=1.78.0"]
google-genai = ["google-generativeai>=0.8.4"]
huggingface = ["huggingface-hub>=0.27.1"]
mistral = ["mistralai>=1.6.0"]
ollama = ["ollama>=0.4.7"]
openai = ["openai>=1.68.2"]
reka = ["reka-api>=3.2.0"]
together = ["together>=1.4.6"]

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    # "scalene",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310"
line-length = 119

[tool.ruff.lint]
# per-file-ignores = { "tests/**/*.py" = [
#     "D", # missing docstring in public module
# ] }

select = [
    "F", # pyflakes
    # pycodestyle
    "E", # errors
    "W", # warnings

    "B", # bugbear
    "C", # mccabe
    "S", # flake8-bandit

    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "I",   # isort
    "PT",  # pytest
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "UP",  # pyupgrade

    "ASYNC",
    "DTZ",
]
ignore = [
    "D105", # missing docstring in magic method
    "E501", # line too long
    "S101", # use of assert detected

    # see https://github.com/astral-sh/ruff/issues/4045
    "S602",
    "S603",
]
mccabe.max-complexity = 17
pydocstyle.convention = "google"
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.coverage.run]
branch = true
source = ["llms"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.report]
show_missing = true

[tool.pyright]
venv = ".venv"
pythonVersion = "3.10"
include = ["src"]
exclude = [
    # "**/node_modules",
    "**/__pycache__",
    # "src/experimental",
    # "src/typestubs"
]
# ignore = ["tests"]
defineConstant = { DEBUG = true }
# stubPath = "src/stubs"

reportMissingImports = "error"
reportMissingTypeStubs = false

# pythonPlatform = "Linux"

# executionEnvironments = [
#   { root = "src/web", pythonVersion = "3.5", pythonPlatform = "Windows", extraPaths = [ "src/service_libs" ], reportMissingImports = "warning" },
#   { root = "src/sdk", pythonVersion = "3.0", extraPaths = [ "src/backend" ] },
#   { root = "src/tests", extraPaths = ["src/tests/e2e", "src/sdk" ]},
#   { root = "src" }
# ]
